--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,4 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/higgi13425/medicaldata
 RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
