--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: Provides access to medical datasets for teaching.
     Theoph, lh, infert, and some data donations.
 Depends:
     R (>= 3.1)
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/higgi13425/medicaldata
