--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,5 @@ LazyData: true
 URL: https://github.com/higgi13425/medicaldata
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
+Suggests: 
+    learnr
