--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Depends:
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-URL: https://github.com/higgi13425/medicaldata
+URL: https://higgi13425.github.io/medicaldata/
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
 Suggests: 
