added markdown to suggested packages in DESCRIPTION, updated .Rbuildignore to a version from {forcats} github

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ BugReports: https://github.com/higgi13425/medicaldata/issues
 Suggests: 
     knitr,
     rmarkdown,
+    markdown,
     learnr
 VignetteBuilder: knitr
 Encoding: UTF-8
