--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: Provides access to medical datasets for teaching.
     Featuring several from the Teaching of Statistics in the Health Sciences
     website, a few reconstructed datasets of 
     historical significance in medical research,
-    some reformatted and extended from existing R packages {HSAUR}, 
+    some reformatted and extended from existing R packages, 
     and some data donations.
 Depends:
     R (>= 3.1)
