--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,14 @@ Package: medicaldata
 Type: Package
 Title: Data Package for Medical Datasets
 Version: 0.2.0
-Authors@R: c(
-    person("Peter", "Higgins", email="higgi13425@yahoo.com", role = c("aut", "cre"))
-    )
+Authors@R: c(person(given = "Peter", family = "Higgins", 
+    email="higgi13425@yahoo.com", role = c("aut", "cre"),
+    comment = c(ORCID = "0000-0002-7111-0077")))
 Date: 2021-08-08
-Description: Provides access to medical datasets for teaching.
-    Featuring several from the Teaching of Statistics in the Health Sciences
-    website, a few reconstructed datasets of 
-    historical significance in medical research,
-    some reformatted and extended from existing R packages, 
+Description: Provides access to well-documented medical datasets for teaching.
+    Featuring several from the Teaching of Statistics in the Health Sciences 
+    website, a few reconstructed datasets of historical significance in medical
+    research, some reformatted and extended from existing R packages, 
     and some data donations.
 Depends:
     R (>= 3.1)
