--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 0.2.0
 Authors@R: c(person(given = "Peter", family = "Higgins", 
     email="higgi13425@yahoo.com", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0002-7111-0077")))
+Maintainer: 'Peter Higgins <higgi13425@yahoo.com>'
 Date: 2021-08-08
 Description: Provides access to well-documented medical datasets for teaching.
     Featuring several from the Teaching of Statistics in the Health Sciences 
