--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,6 @@ Version: 0.2.0
 Authors@R: c(person(given = "Peter", family = "Higgins", 
     email="higgi13425@yahoo.com", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0002-7111-0077")))
-Maintainer: 'Peter Higgins <higgi13425@yahoo.com>'
 Date: 2021-08-08
 Description: Provides access to well-documented medical datasets for teaching.
     Featuring several from the Teaching of Statistics in the Health Sciences 
@@ -15,7 +14,7 @@ Description: Provides access to well-documented medical datasets for teaching.
 Depends:
     R (>= 3.1)
 License: MIT + file LICENSE
-URL: https://higgi13425.github.io/medicaldata/, https://higgi13425.github.io/medicaldata/
+URL: https://higgi13425.github.io/medicaldata/, https://github.com/higgi13425/medicaldata/
 BugReports: https://github.com/higgi13425/medicaldata/issues
 Suggests: 
     knitr,
