fixed package size by adding ^man/codebooks$ ^man/description_docs$ to .Rbuildignore - from 5.2MB to 0.5 MB

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -19,5 +19,5 @@
 ^\.github/workflows/R-CMD-check\.yaml$
 ^\.github/workflows/pr-commands\.yaml$
 ^\.github/workflows/pkgdown\.yaml$
-^\man\codebooks
-^\man\description_docs
+^man/codebooks$
+^man/description_docs$
