--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R: c(person(given = "Peter", family = "Higgins",
 Date: 2021-08-08
 Description: Provides access to well-documented medical datasets for teaching.
     Featuring several from the Teaching of Statistics in the Health Sciences 
-    website, a few reconstructed datasets of historical significance in medical
+    website <https://www.causeweb.org/tshs/category/dataset/>, a few reconstructed datasets of historical significance in medical
     research, some reformatted and extended from existing R packages, 
-    and some data donations.
+    and some data donations. 
 Depends:
     R (>= 3.1)
 License: MIT + file LICENSE
