edited making_tables vignette, added packages required by vignette to the Suggests field of the DESCRIPTION file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,10 @@ Suggests:
     knitr,
     rmarkdown,
     markdown,
-    learnr
+    learnr,
+    flextable,
+    tidyverse,
+    janitor
 VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
