fixed syntax error in line 77 of R-CMD-check.yaml

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -74,4 +74,4 @@ jobs:
       with:
        args: 'c("--no-manual", "--as-cran")'
        error-on: '"error"'
-       check-dir: '"check"
+       check-dir: '"check"'
